testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_digit/case6.expect.out
error: expected decimal digit, found '仓'
  ==> case6.cj:14:12:
   | 
14 |     var a = .1仓颉
   |               ^^ expected decimal digit
   | 

1 error generated, 1 error printed.
